# docs/swagger.json
@@ -34,7 +34,7 @@
         ],
         "responses": {
           "200": {
-            "description": "jwt-token, 过期时间",
+            "description": "OK",
             "schema": {
               "allOf": [
                 {
@@ -73,7 +73,7 @@
         "summary": "刷新 token",
         "responses": {
           "200": {
-            "description": "jwt-token, 过期时间",
+            "description": "OK",
             "schema": {
               "allOf": [
                 {
@@ -118,7 +118,7 @@
         ],
         "responses": {
           "200": {
-            "description": "jwt-token, 过期时间",
+            "description": "OK",
             "schema": {
               "allOf": [
                 {
@@ -129,6 +129,45 @@
                   "properties": {
                     "data": {
                       "$ref": "#/definitions/dto.AuthRegisterResp"
+                    }
+                  }
+                }
+              ]
+            }
+          }
+        }
+      }
+    },
+    "/user": {
+      "get": {
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "User"
+        ],
+        "summary": "获取用户信息",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "allOf": [
+                {
+                  "$ref": "#/definitions/responsex.Response"
+                },
+                {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "$ref": "#/definitions/dto.UserInfoResp"
                     }
                   }
                 }
@@ -201,6 +240,15 @@
         },
         "access_token": {
           "description": "jwt-token",
+          "type": "string"
+        }
+      }
+    },
+    "dto.UserInfoResp": {
+      "type": "object",
+      "properties": {
+        "nickname": {
+          "description": "昵称",
           "type": "string"
         }
       }
