# internal/services/dto/user.go
@@ -1,5 +1,5 @@
 package dto
 
 type UserInfoResp struct {
-	Nickname string `json:"nickname"`
+	Nickname string `json:"nickname"` // 昵称
 }
